@@ -1,3 +1,8 @@
+2006-05-14	Benedikt Meurer <benny@xfce.org>
+
+	* terminal/terminal-window.c(terminal_window_screen_removed): Fix a
+	  possible crash when removing all terminal screens at once.
+
 2006-05-01	Benedikt Meurer <benny@xfce.org>
 
 	* icons/48x48/Makefile.am: Properly install Terminal.png into the
